--- a/JavaScript/每天看到的.md
+++ b/JavaScript/每天看到的.md
@@ -8,3 +8,7 @@ jion的用法
  var arr = ["hello", "world"];
  var str = arr.join("<br/>");
  ```
+ 
+ URL重定向
+ ------------
+ 不要使用`location.href = url`，这会在历史记录里面生成一条历史记录，然后回退的时候会形成死循环页面，建议使用`location.replace(url)`来重定向路径
