本地发布网站
修改了 换行

--- a/本地发布网站访问.md
+++ b/本地发布网站访问.md
@@ -4,10 +4,10 @@
 
 2.打开iis服务
 ===================
-  在计算机-管理中启用IIS信息服务
-  1）添加网站
-  2）新添加的网站 添加虚拟目录
-  3）把虚拟目录转换为应用程序
+  在计算机-管理中启用IIS信息服务<br/>
+  1）添加网站 <br/>
+  2）新添加的网站 添加虚拟目录<br/>
+  3）把虚拟目录转换为应用程序<br/>
   
   然后就可以在浏览器中用IP访问了
 
