--- a/预处理器学习总结.md
+++ b/预处理器学习总结.md
@@ -18,3 +18,39 @@
 5.继承
 ===========================================================
 @extend 实际上起到分类选择器的作用
+
+6.占位符
+=========================================================
+待引用的公共样式 用到占位符 例如button的公共样式 写法%加上名字及样式
+
+7.混合宏
+======================================================
+定义：用@mixin 例如<br/>
+`
+@mixin name($queryString){
+   @media #{$queryString}{
+    @content;
+   }
+}
+`
+
+
+<br/>
+
+引用：@include 例如<br/>
+
+
+`
+@include name("(min-width:700px)"){
+  //
+}
+`
+
+8.函数指令 
+=========================================
+定义了一个函数 类似于js 操作已定义的变量  通过@return 指令返回值 例如 <br/>
+
+`@function getWidth($a,$b){
+   @return ($a/$b);
+ }
+`
