--- a/预处理器学习总结.md
+++ b/预处理器学习总结.md
@@ -1,7 +1,11 @@
 1.变量 
 ================================================================================
+ 命名规则：美元符号$,变量名，冒号（表示变量名结束），变量值，分号。<br/>
  用$name 命名的变量 关键字 !global; !default; 其中!global 相当于!important 增加权重等级或者说与js中的全局变量是一个意思，!default 默认变量，如果未声明显示变量则会使用此默认值
-  
+ <br/>
+ 自动转换rgba 值 使用rgba($color,0.9)
+ <br/>
+ 
 2.计算 
 ================================================================================
 +-*/% 不能混合单位运算，对于非变量使用-括起来 例如 14px/32px; 
@@ -34,7 +38,6 @@
 }
 `
 
-
 <br/>
 
 引用：@include 例如<br/>
@@ -54,3 +57,14 @@
    @return ($a/$b);
  }
 `
+
+
+9.一点命令行的知识
+===============================================
+  列出目录下所有文件：dir
+  <br/>
+  回到上一级目录： cd..
+  <br/>
+  跳转到其他文件: cd filename
+  <br/>
+  
