--- a/预处理器学习总结.md
+++ b/预处理器学习总结.md
@@ -21,11 +21,11 @@
 
 5.继承
 ===========================================================
-@extend 实际上起到分类选择器的作用
+通过@extend 引用 通用样式 ，起到分组选择器的作用，如果代码中不涉及变量，且有一个基类已在文件中存在，那么可以使用继承
 
 6.占位符
 =========================================================
-待引用的公共样式 用到占位符 例如button的公共样式 写法%加上名字及样式
+待引用的公共样式 用到占位符 例如button的公共样式 写法%加上名字及样式 减少冗余代码，如果未被@extend 引用，则编译的时候 不会生成css
 
 7.混合宏
 ======================================================
@@ -37,7 +37,7 @@
    }
 }
 `
-
+混合宏的缺点是编译后不能合并相同的样式代码，会造成冗余，所以使用建议是 如果 代码中涉及到变量使用混合宏。
 <br/>
 
 引用：@include 例如<br/>
@@ -67,4 +67,13 @@
   <br/>
   跳转到其他文件: cd filename
   <br/>
-  
+ 
+10.列表
+================================================
+$list 语法格式宽松  例：<br>
+ $list-empty:();空列表<br>
+ $list-two:("one","two"); <br>
+ $list-two:"one" "tow"; <br>
+ $list-list:(("one","tow","three"),("one","tow","three"),("one","tow","three"));多维列表 <br>
+ 配合@each @for 或者函数nth()使用 <br>
+ nth($list-two,1);<br>
